# ollamaresearch

./: .gitignore  README.md  install.bat  install.ps1  install.sh  pyproject.toml
ollamaresearch/: __init__.py  __main__.py  cli.py
ollamaresearch/core/: code_agent.py  history.py  notifier.py  ollama_client.py  rag.py  research_agent.py  search_engine.py  web_scraper.py
ollamaresearch/tui/: app.py
ollamaresearch/tui/screens/: code_view.py  history_screen.py  model_selector.py  research_view.py  settings.py
ollamaresearch/utils/: config.py
